k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: motegao-prod
  labels:
    app: motegao
    environment: production
